[gd_scene load_steps=8 format=2]

[ext_resource path="res://Content/Colors/resurect_corrected_texture.png" type="Texture" id=1]
[ext_resource path="res://Content/Assets/Enemies/Enemy_Middle.gltf" type="PackedScene" id=2]
[ext_resource path="res://Content/Scripts/Enemy_Follow_Player.gd" type="Script" id=4]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 1 )

[sub_resource type="CapsuleShape" id=3]
radius = 0.913663
height = 1.09312

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.567072, 0.323703, 0.422414 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.870326, 1, 0.808068 )

[node name="Enemy_Follow_Player" type="KinematicBody" groups=["Enemies"]]
script = ExtResource( 4 )

[node name="Enemy_Middle" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.1, 0, -8.74228e-09, 0, 0.1, 0, 8.74228e-09, 0, -0.1, 0, 0, 0 )

[node name="Body003" parent="Enemy_Middle/Armature/Skeleton" index="0"]
material/0 = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.112132, -4.90145e-09 )
shape = SubResource( 3 )

[node name="Damagin_Area" type="Area" parent="."]

[node name="Damaging_Box" type="CollisionShape" parent="Damagin_Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65141, 0 )
shape = SubResource( 2 )

[node name="Looking_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Detection_Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Detection_Area"]
transform = Transform( 10, 0, 0, 0, 3, 0, 0, 0, 10, 0, 0, -8.07588 )
shape = SubResource( 4 )

[node name="Idling_Timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="NavigationAgent" type="NavigationAgent" parent="."]
avoidance_enabled = true

[connection signal="body_entered" from="Damagin_Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Looking_Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Detection_Area" to="." method="_on_Detection_Area_body_entered"]
[connection signal="body_exited" from="Detection_Area" to="." method="_on_Detection_Area_body_exited"]
[connection signal="timeout" from="Idling_Timer" to="." method="_on_Timer2_timeout"]
[connection signal="velocity_computed" from="NavigationAgent" to="." method="_on_NavigationAgent_velocity_computed"]

[editable path="Enemy_Middle"]
